bodyParser 먼저 실행 해야 req.body 출력가능

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Metadata</title>
+    <title>Find Someone</title>
 </head>
 <body>
     <!-- <form action="/upload" method="post" enctype="multipart/form-data">
@@ -15,7 +15,7 @@
     <header>Who are U</header>
 <form class="form">
     <div class="input"><input class="user_name" type="text" placeholder="name" /></div>
-    <div class="input"><input class="user_birth" type="date" value="2013-01-08"/></div>
+    <div class="input"><input class="user_birth" type="text" /></div>
     <div class="input"><input class="upload" type="submit" value="upload"/></div>
     
 </form>
